ssh: Disable UseRoaming for due to security vulnerability.

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,6 +2,8 @@
 
 Host *
 	ServerAliveInterval 60
+	UseRoaming no
+		# See http://undeadly.org/cgi?action=article&sid=20160114142733
 
 Host vvv-personal vvv-wme
 	HostName 192.168.50.4
